--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -9,3 +9,50 @@
 body {
     font-family: "Lato";
 }
+
+.wrapper {
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+    color: red;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space- space-between;
+    padding: 2em;
+}
+
+.brand {
+    margin: top -8px;;
+}
+
+.brand span {
+color:aquamarine;
+}
+
+.menu {
+    display: flex;
+    width: 50%;
+    justify-content: space-around;
+}
+
+.menu li {
+    list-style: none;
+}
+
+.menu a {
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 20px;
+}
+
+.menu .active {
+    color: orange;
+
+}
+
+.menu a:hover {
+    background-color:#fff;
+    color: black;
+}
