--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -13,7 +13,7 @@ body {
 .wrapper {
     width: 100vw;
     height: 100vh;
-    background-color: slategrey;
+    background-color: rgb(27, 33, 39);
     color: aqua;
 }
 
@@ -96,4 +96,26 @@ span{
 .download-cv:hover {
     background-color: #fff;
     box-shadow: none; 
+}
+
+.about {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    width: 100vw;
+    align-items: center;
+}
+
+.about img {
+    width: 50%;
+    grid-column: 1/5;
+}
+
+.about-info {
+    grid-column: 5/10;
+    padding: 2em;
+
+}
+
+.about-info h2 {
+    font-size: 2em;
 }
