--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -10,7 +10,8 @@ body {
     font-family: "Lato";
 }
 
-.wrapper {
+.wrapper,
+.portfolio {
     width: 100vw;
     height: 100vh;
     background-color: rgb(27, 33, 39);
@@ -131,4 +132,30 @@ span{
 
 .about p {
     margin-bottom: 1em;
+}
+
+.portfolio-headings {
+    width: 100vw;
+    padding: 5em;
+}
+
+.portfolio-headings h2 {
+    font-size: 2.5em;
+}
+
+.portfolio .container {
+    width: 80vw;
+    height: 80vh;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+}
+.card {
+    width: 300px;
+}
+.card__image {
+    width: 100%;
+    height: 150px;
+    background-image: url(../img/cyber_topic_46.jpg);
+    background-size: cover;
 }
