--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -152,10 +152,29 @@ span{
 }
 .card {
     width: 300px;
+    height: 350px;
+    background-color:  rgb(27, 33, 39);
 }
 .card__image {
     width: 100%;
     height: 150px;
-    background-image: url(../img/cyber_topic_46.jpg);
+    background-image:url(../img/htm.jpg);
     background-size: cover;
+}
+.card__title {
+    padding: 20px ;
+}
+
+.card .project-details {
+    display: flex;
+    justify-content: center;
+    margin: 1em;
+    width: 70%;
+    display: flex;
+    align-self: center;
+}
+
+.card .project-details a {
+    text-decoration: none;
+    color:  rgb(27, 33, 39);
 }
