--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -178,3 +178,51 @@ span{
     text-decoration: none;
     color:  rgb(27, 33, 39);
 }
+.contact section {
+    padding: 3em;
+    margin: 0 auto;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    width: 30vw;
+    margin-top: 2em;
+}
+
+
+.form input {
+    padding: 10px 20px;
+    margin-bottom: 1em;
+    background: none;
+    border: none;
+    border-bottom: 1px solid #fff;
+    color: #fff;
+}
+
+.form textarea {
+    height: 150px;
+    background: none;
+    color: #fff;
+    padding: 1.5em;
+    border: 1px solid #fff;
+}
+
+.btn-submit {
+    padding: 10px 20px;
+    margin: 1em;
+    border: none;
+    text-transform: uppercase;
+    background-color: orange;
+    cursor: pointer;
+    box-shadow: 2px 3px 12px -5px rgba(102, 231,200,.69);
+}
+
+.btn-submit:hover {
+    background-color: #fff;
+    box-shadow: none;
+}
+.contact-section  {
+    background-color:rgb(27, 33, 39); ;
+    border-top-color: rgb(27, 33, 39);;
+}
